# ML-Spring-Practical-Tasks

./: 22_LR_JA_Yauheni_Chekan_Classification2.ipynb  22_LR_JA_Yauheni_Chekan_Classification2_2.ipynb  22_LR_JA_Yauheni_Chekan_Clustering.ipynb  22_LR_JA_Yauheni_Chekan_DP.ipynb  22_LR_JA_Yauheni_Chekan_Ensembles.ipynb  22_LR_JA_Yauheni_Chekan_Final_Assignment.ipynb  22_LR_JA_Yauheni_Chekan_Interpretability.ipynb  22_LR_JA_Yauneni_Chekan.ipynb  22_LR_JA_Yauneni_Chekan_Regression.ipynb  Data_Preparation_Building_Permits.ipynb  README.md  pyproject.toml  yauheni_chekan_hw_1.py
